2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_create): connect to the menu's deactivate signal
		- (nma_menu_deactivate_cb): free menu items (and thus devices) when
			the menu disappears to ensure that everything gets unreffed
			properly.  Previously, since the menu items would only get unreffed
			when the menu dropped down again, devices wouldn't get disposed of
			when NetworkManager went away, and when NM would start back up again,
			the applet would have a stale AP and device list.

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/page-wireless-security.c
		- (get_default_type_for_security): unencrypted connections shouldn't
			have a wireless-security setting
		- (ce_page_wireless_security_new): don't set the wireless-security
			setting if security isn't specified in the wireless setting; guess
			the WEP key type

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
		- (ws_wep_key_new): fill WEP keys from keyring
		- (ws_wep_guess_key_type): new function; guess the WEP key type for a
			given WEP connection's secrets

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (get_default_type_for_security): unencrypted connections shouldn't
			have a wireless-security setting
		- (security_combo_init): don't set the wireless-security setting if
			security isn't specified in the wireless setting
		- (nma_wireless_dialog_get_connection): handle unencrypted connections
			better

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/Makefile.am
		- (nm_gconf_get_keyring_items): new function; pull generic bits out
			of applet_exported_connection_get_secrets() so that the connection
			editor can use them too

	* src/applet-dbus-settings.c
		- (applet_exported_connection_get_secrets): pull keyring-reading stuff